--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
     </div>
     <div data-key="83" class="key">
       <kbd>S</kbd>
-      <span class="sound">hihat</span>
+      <span id="hihat" onclick="hihat()" class="sound">hihat</span>
     </div>
     <div data-key="68" class="key">
       <kbd>D</kbd>
-      <span class="sound">kick</span>
+      <span id="kick" onclick="kick()" class="sound">kick</span>
     </div>
     <div data-key="70" class="key">
       <kbd>F</kbd>
-      <span class="sound">openhat</span>
+      <span id="openhat" onclick="openhat()" class="sound">openhat</span>
     </div>
     <div data-key="71" class="key">
       <kbd>G</kbd>
-      <span class="sound">boom</span>
+      <span id="boom" onclick="boom()" class="sound">boom</span>
     </div>
     <div data-key="72" class="key">
       <kbd>H</kbd>
-      <span class="sound">ride</span>
+      <span id="ride" onclick="ride()" class="sound">ride</span>
     </div>
     <div data-key="74" class="key">
       <kbd>J</kbd>
-      <span class="sound">snare</span>
+      <span id="snare" onclick="snare()" class="sound">snare</span>
     </div>
     <div data-key="75" class="key">
       <kbd>K</kbd>
-      <span class="sound">tom</span>
+      <span id="tom" onclick="tom()" class="sound">tom</span>
     </div>
     <div data-key="76" class="key">
       <kbd>L</kbd>
-      <span class="sound">tink</span>
+      <span id="tink" onclick="tink()" class="sound">tink</span>
     </div>
   </div>
 
